1. Menambahkan animasi otomatis slide, 2. Menambahkan informasi infaq

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="kosong"></div>
   <header id="header">
-    <img src="img/FotoProfilNuruddinInstitue.jpg" alt="tes">
+    <img src="img/FotoProfilNuruddinInstitue.jpg" alt="tes" loading="lazy">
     <nav>
       <ul>
         <li style="background-color: #D0D0D0;">
@@ -71,7 +71,7 @@
             </h1>
           </div>
           <div class="kanan">
-            <img src="img/welcome.jpg" alt="Kelas Yang Terdiri dari Kelas Sharaf, Nahwu dan Kelas Baca Kitab" style="max-width: 100%; height: auto;">
+            <img src="img/welcome.jpg" alt="Kelas Yang Terdiri dari Kelas Sharaf, Nahwu dan Kelas Baca Kitab" style="max-width: 100%; height: auto;" loading="lazy">
           </div>
         </div>
         <p>Website Yang Bertujuan Untuk Menyediakan Informasi 
@@ -115,13 +115,14 @@
         
         <table class="styled-table">
           <thead>
-            <tr>
+            <tr style="text-align: center;">
               <th>Kelas</th>
               <th>Hari</th>
               <th>Jam</th>
+              <th>Infaq (/bulan)</th>
             </tr>
           </thead>
-          <tbody id="jadwalBody">
+          <tbody id="jadwalBody" style="text-align: center;">
           </tbody>
         </table>
       </section>
@@ -131,19 +132,19 @@
         <div class="slideshow-container">
           <div class="mySlides fade">
            <a href="https://www.instagram.com/p/CKL-kyhLq6q/">
-             <img src="img/artikel1.jpg" alt="Waktu Takkan Terulang" style="border: solid white 3px; border-radius: 5px;">
+             <img src="img/artikel1.jpg" alt="Waktu Takkan Terulang" style="border: solid white 3px; border-radius: 5px;" loading="lazy">
            </a>
           </div>
 
           <div class="mySlides fade">
             <a href="https://www.instagram.com/p/CKS2VCuhm55/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">
-              <img src="img/artikel2.jpg" alt="Kemana Arah Langkahmu" style="border: solid white 3px; border-radius: 5px;"">
+              <img src="img/artikel2.jpg" alt="Kemana Arah Langkahmu" style="border: solid white 3px; border-radius: 5px;" loading="lazy">
             </a>
           </div>
 
           <div class="mySlides fade">
             <a href="https://www.instagram.com/p/CKjDLixBEsX/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">
-              <img src="img/artikel3.jpg" alt="Ingat Hakikat Hidupmu" style="border: solid white 3px; border-radius: 5px;">
+              <img src="img/artikel3.jpg" alt="Ingat Hakikat Hidupmu" style="border: solid white 3px; border-radius: 5px;" loading="lazy">
             </a>
           </div>
 
@@ -163,7 +164,7 @@
         <h1>Galeri dan Video</h1>
         <div class="slideshow-container media-slideshow">
           <div class="mySlides fade">
-            <img src="img/galeri1.jpg" alt="Kegiatan 1" style="border: solid white 3px; border-radius: 5px;">
+            <img src="img/galeri1.jpg" alt="Kegiatan 1" style="border: solid white 3px; border-radius: 5px;" loading="lazy">
           </div>
 
           <div class="mySlides fade">
